# product-management-poc

./: .env.example  .gitignore  CHANGES.md  FRONTEND_DESIGN_BRIEF.md  README(v2).md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_yoshioka_2026_05_11_additions.py  003_basic_crud_schema.py  004_fulltext_search_index.py  005_low_stock_threshold.py  006_sales_payment_method.py  007_sales_txn_and_staff.py  008_sales_refund.py  009_product_tax_rate.py  010_product_reorder_requested.py  011_users_auth.py  012_variant_branch_stock.py  013_notifications.py  014_product_lots.py  015_transfer_reason.py  016_attribution_audit_catname_codes.py  017_po_comments.py  018_approvals.py  019_product_attribution.py  020_ai_corrections.py  021_expired_write_off_reason.py
backend/app/: config.py  db.py  deps.py  main.py  seed.py
backend/app/data/: __init__.py  faq.py
backend/app/models/: __init__.py  ai_session.py  approval.py  audit.py  base.py  branch.py  category.py  inventory.py  lot.py  notification.py  product.py  purchase_order.py  sale.py  settings_kv.py  store.py  support.py  tag.py  user.py  vendor.py
backend/app/routers/: ai_suggestions.py  approvals.py  auth.py  branches.py  categories.py  dashboard.py  (+15 more)
backend/tests/: conftest.py  golden_jans.json  test_ai_corrections.py  test_ai_golden.py  test_inventory.py  test_perf_and_cap.py  test_products.py  test_purchase_orders.py  test_reorder_writeoff.py  test_sales.py  test_tenancy.py  test_title_guard.py
jan-lookup-poc/: .gitignore  README.md  pyproject.toml
jan-lookup-poc/inputs/: jan_codes.txt  product_names.txt
jan-lookup-poc/src/: agent.py  bench_models.py  main.py  main_name.py  reporter.py  runner.py  schema.py
(+137 files in other folders)
