[project]
name = "product-management-backend"
version = "0.1.0"
description = "Product management backend for Japanese dental clinics"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "openai-agents>=0.0.7",
]

[project.optional-dependencies]
# Test-only — not shipped. Install with: pip install -e .[dev]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One event loop for the whole session — the shared aiomysql engine's
# connections must not hop between per-test loops.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
